# License-Management-System

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake  imgui.ini
licenses/: license.lic
src/client/: CMakeLists.txt  license_client.cpp  license_client.h  license_client_exception.h  main.cpp  tls_client.cpp  tls_client.h
src/common/: base64.cpp  base64.h
src/generator/: CMakeLists.txt  license_gen.cpp  license_gen.h  mac_address.cpp  mac_address.h  main.cpp  rsa_sign.cpp  rsa_sign.h  utils.cpp  utils.h
src/logger/: CMakeLists.txt  logger.cpp  logger.h
src/server/: CMakeLists.txt  UI.cpp  UI.h  client.cpp  client.h  client_handler.cpp  client_handler.h  config.h  license.h  license_manager.cpp  license_manager.h  main.cpp  pzheader.cpp  pzheader.h  render.cpp  render.h  server.cpp  tls_server.cpp  tls_server.h  ui_windows.cpp  ui_windows.h
src/server/server/: client.cpp  client.h  client_handler.cpp  client_handler.h  license_manager.cpp  license_manager.h  server.h  tls_server.cpp  tls_server.h
src/server/ui/: UI.cpp  UI.h  render.cpp  render.h  ui_windows.cpp  ui_windows.h
